--- a/config.json
+++ b/config.json
@@ -15,17 +15,17 @@
       },
       "analytics": {
         "base-currency-code": "USD",
-        "environment": "Testing",
+        "environment": "Production",
         "environment-id": "Fwus6kdpvYCmeEdcCX7PZg",
         "store-code": "YOUR_STORE_CODE",
-        "store-id": "YOUR_STORE_ID",
-        "store-name": "YOUR_STORE_NAME",
-        "store-url": "YOUR_STORE_URL",
+        "store-id": "1",
+        "store-name": "ACO Demo",
+        "store-url": "https://www.aemshop.net",
         "store-view-code": "YOUR_STORE_VIEW_CODE",
-        "store-view-id": "YOUR_STORE_VIEW_ID",
-        "store-view-name": "YOUR_STORE_VIEW_NAME",
+        "store-view-id": "1",
+        "store-view-name": "Default Store View",
         "website-code": "YOUR_WEBSITE_CODE",
-        "website-id": "YOUR_WEBSITE_ID",
+        "website-id": "1",
         "website-name": "YOUR_WEBSITE_NAME"
       },
       "plugins": {
