--- a/config.json
+++ b/config.json
@@ -8,9 +8,8 @@
           "Store": "default"
         },
         "cs": {
-          "AC-View-ID": "{{catalogViewUUID}}",
-          "AC-Price-Book-ID": "{{priceBookID}}",            
-          "AC-Policy-{{attributeTrigger}}": "{{attributeValue}}" 
+          "AC-View-ID": "bbfbd98d-9b34-4857-9619-89d14c426ec9",
+          "AC-Price-Book-ID": "west_coast_inc"
         }
       },
       "analytics": {
