--- a/config.json
+++ b/config.json
@@ -15,7 +15,7 @@
       "analytics": {
         "base-currency-code": "USD",
         "environment": "Production",
-        "environment-id": "Fwus6kdpvYCmeEdcCX7PZg",
+        "environment-id": "QLAfBfzromvPvMhhu1D5vN",
         "store-code": "YOUR_STORE_CODE",
         "store-id": "1",
         "store-name": "ACO Demo",
