--- a/config.json
+++ b/config.json
@@ -9,7 +9,9 @@
         },
         "cs": {
           "AC-View-ID": "bbfbd98d-9b34-4857-9619-89d14c426ec9",
-          "AC-Price-Book-ID": "west_coast_inc"
+          "AC-Price-Book-ID": "west_coast_inc",
+          "ac-scope-locale": "en-US",
+          "ac-environment-id": "QLAfBfzromvPvMhhu1D5vN"
         }
       },
       "analytics": {
